2005-08-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/pango-font.cc (text_stencil): don't translate glyphs in
	unscaled transform, just translate stencils.

	* ly/performer-init.ly: init timing to #t.  Fixes bar checks in
	MIDI.

	* scm/define-markup-commands.scm (wordwrap-string): use
	text-direction
	(wordwrap-stencils): idem.
	(line): idem..
	(fill-line): idem.
	(wordwrap-stencils): translate last line to right for
	text-direction = LEFT.

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	text-direction.

2005-08-25  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* lily/lily-parser.cc (Lily_parser): also copy output_basename_
	when copying a Lily_parser object.

2005-08-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (null): add null markup.

2005-08-25  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/item.cc: Add documentation of center-invisible

2005-08-24  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: add info about
	raising text.

	* Documentation/user/programming-interface.itely: fix example
	involving raised text.

2005-08-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc (print): fix X start/end points of isolated
	beamlets.

	* scm/output-ps.scm (grob-cause): escape spaces in URLs.

	* lily/multi-measure-rest.cc (set_text_rods): new function.

	* lily/vertical-align-engraver.cc (process_music): call
	Align_interface::set_axis(). This forces #'elements to be ordered,
	preventing random vertical reordering of staves.

	* scm/define-grob-interfaces.scm (dynamic-line-spanner-interface):
	add avoid-slur property. 

	* Documentation/user/basic-notation.itely (Measure repeats): add
	countPercentRepeats example.

	* Documentation/user/advanced-notation.itely (Other text markup
	issues): remove remark about normal-font.  We have \normal-text

	* input/regression/tie-chord.ly: add note about remaining bugs.

	* lily/tie.cc (print): try Tie_column::set_directions () if