@@ -1,3 +1,8 @@
+2005-08-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/tie-column.cc (set_chord_outlines): set outline for line
+	break case too.
+	
 2005-08-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/pango-font.cc (text_stencil): don't translate glyphs in
